5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1671_1101.log
== TEST (2019-04-26 19:22:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif((y=="R")and(x<500)):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif((y=="R")and(x<500)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:22:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif((y=="R")and(x<500)):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif((y=="R")and(x<500)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:23:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif((y=="R")and(x<500)):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif((y=="R")and(x<500)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:23:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif((y=="R")and(x<500)):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif((y=="R")and(x<500)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:24:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif((y=="R")and(x<500)):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif((y=="R")and(x<500)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:24:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:25:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2)
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 12
    elif(y=="R")and(x<500):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:26:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2)
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2)
-- ERROR:
File "XXXX", line 15
    elif((y=="C")and(x>1000)):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:26:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:27:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.19137
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:27:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:27:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:28:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:28:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:29:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:33:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.156444
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:33:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:34:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:34:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.215978
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:37:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 1))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 1))
elif((y=="C")and(x>=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 1))
elif((y=="C")and(x<1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 1))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 1))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 1))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:38:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:41:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:41:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x>=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x<500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.154474
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 420.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:42:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.185046
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:42:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:44:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.161028
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:45:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.141776
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:45:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z= x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
else:
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:50:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000))
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.127507
-- ERROR:
  File "/home/codebench/codes/1671/1101/main.py", line 24
    elif((y=="I")and(x>5000))
                            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:50:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000))
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- ERROR:
File "XXXX", line 24
    elif((y=="I")and(x>5000))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 19:51:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.206233
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:51:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 19:52:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kwh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 04:47:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "KWh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- OUTPUT:
Entradas: -56.0 KWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 04:48:03) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "KWh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.135942
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 KWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 KWh e tipo R
Valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 04:48:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x= float(input("c:"))
y=input("t=R/I/C:")
print("Entradas:",x, "kWh e tipo",y)
if(x<0) or (y!="R") and(y!="I")and(y!="C"):
	print("Dados invalidos")
elif((y=="R")and(x<=500)):
	z = x * 0.44
	print("Valor total: R$", round(z, 2))
elif(y=="R")and(x>500):
	z = x * 0.65
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x<=1000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="C")and(x>1000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x<=5000)):
	z = x * 0.55
	print("Valor total: R$", round(z, 2))
elif((y=="I")and(x>5000)):
	z = x * 0.60
	print("Valor total: R$", round(z, 2))
-- EXECUTION TIME:
0.136365
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
